# pyrbd

./: .coverage  .readthedocs.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tutorials.html
.github/workflows/: deploy_docs.yml  pylint_pytest.yml  pylint_pytest_windows.yml  pypi_publish.yml
docs/: index.md  requirements.txt  tutorials.md
docs/examples/: example_rbd.py  layered_rbd.py  simple_rbd.py
docs/reference/: block.md  diagram.md  group.md  index.md  series.md
examples/: example_rbd.py  simple_rbd.py
pyrbd/: __init__.py  block.py  diagram.py  group.py  series.py  templates.py
pyrbd/templates/: block.tex.jinja  diagram.tex  diagram.tex.jinja  group.tex.jinja  series.tex.jinja
reference/: block.html  config.html  diagram.html  index.html
search/: search_index.js  search_index.json
site/: 404.html  index.html  objects.inv  tutorials.html
site/reference/: block.html  diagram.html  group.html  index.html  series.html
site/search/: search_index.js  search_index.json
tests/latex/: test_diagram_latex.py
tests/unit/: test_block.py  test_diagram.py
