[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pyrbd"
version = "0.1.0"
description = "Package for creating simple reliability block diagrams using LaTeX TikZ."
readme = "README.md"
authors = [
    {name = "Henning Goa Hugdal", email = "hghugdal@gmail.com"},
]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy>=2.3.2",
]

[project.urls]
Repository = "https://github.com/hghugdal/pyrbd"
Issues = "https://github.com/hghugdal/pyrbd"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
	"pyrbd.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
	"--doctest-modules",
]
testpaths = [
	"pyrbd",
	"tests",
]

[dependency-groups]
dev = [
    "coverage>=7.10.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
    "mypy>=1.17.1",
    "pydoclint>=0.6.6",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "ty>=0.0.1a18",
]

[tool.pylint]
