[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling>=1.26" ]

[project]
name = "pyrbd"
version = "0.4.3b1"
description = "Package for creating simple reliability block diagrams (RBDs) using LaTeX and TikZ."
readme = "README.md"
license = "MIT"
authors = [
  { name = "hghugdal", email = "hghugdal@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "jinja2>=3.1.6",
  "pymupdf>=1.26.3",
]
urls.Documentation = "https://hghugdal.github.io/pyrbd"
urls.Issues = "https://github.com/hghugdal/pyrbd/issues"
urls.Repository = "https://github.com/hghugdal/pyrbd"

[dependency-groups]
dev = [
  "coverage>=7.10.3",
  "markdown-exec[ansi]>=1.11",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.16",
  "mkdocstrings[python]>=0.30",
  "mypy>=1.17.1",
  "pre-commit>=4.3",
  "pydoclint>=0.6.8",
  "pylint>=3.3.8",
  "pymupdf>=1.26.3",
  "pytest>=8.4.1",
  "ruff>=0.12.8",
  "ty>=0.0.1a18",
]

[tool.ruff]
line-length = 99
indent-width = 4
lint.select = ["E", "F", "B", "UP", "I", "SIM"]

[tool.pylint]
ignore-paths = [
  ".venv",
  "dist",
]

[tool.pydoclint]
check-arg-defaults = true
check-style-mismatch = true

[tool.pytest]
ini_options.addopts = [
  "--import-mode=importlib",
  "--doctest-modules",
]
ini_options.testpaths = [
  "pyrbd",
  "tests",
]
ini_options.filterwarnings = [
  # ignore DeprecationWarnings related to PyMuPDF
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
exclude = [
  ".venv",
  "site",
  "dist",
]
overrides = [ { module = [ "pyrbd.*", "pymupdf.*" ], ignore_missing_imports = true } ]
